# Fourier_drawing

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: copy_resources_to_binary_directory.cmake  standard_warnings_and_optimizations.cmake
extlibs/: CMakeLists.txt
include/: DIP_mode.hpp  complex.hpp  debug.hpp  display.hpp  draw_mode.hpp  edit_mode.hpp  fourier.hpp  image.hpp  image_processing_tool.hpp  modifying_image_processing_tool.hpp  request.hpp  resize_request.hpp  screen_change_request.hpp  screen_view.hpp  selection_tool.hpp  skeletonization_tool.hpp  threshold_tool.hpp  wxWidgets_headers.hpp
resources/: layout.xrc
src/: CMakeLists.txt  DIP_mode.cpp  complex.cpp  display.cpp  draw_mode.cpp  edit_mode.cpp  fourier.cpp  image.cpp  image_processing_tool.cpp  main.cpp  main.hpp  modifying_image_processing_tool.cpp  request.cpp  resize_request.cpp  screen_change_request.cpp  screen_view.cpp  selection_tool.cpp  skeletonization_tool.cpp  threshold_tool.cpp
src/image_processing/: CMakeLists.txt  DIP_tool.cpp  DIP_tool.hpp  grid.cpp  grid.hpp
src/image_processing/strategies/: CMakeLists.txt  DIP_path_generation_strategy.cpp  DIP_path_generation_strategy.hpp  DIP_selection_strategy.cpp  DIP_selection_strategy.hpp  DIP_skeletonization_strategy.cpp  DIP_skeletonization_strategy.hpp  DIP_strategy.cpp  DIP_strategy.hpp  DIP_strategy_utilities.cpp  DIP_strategy_utilities.hpp  DIP_threshold_strategy.cpp  DIP_threshold_strategy.hpp
src/image_processing_tools/: CMakeLists.txt  DIP_tool.cpp  DIP_tool.hpp
src/math/: CMakeLists.txt
src/windows/: CMakeLists.txt  DIP_window.cpp  DIP_window.hpp  IDs.hpp  convertions.hpp  draw_window.cpp  draw_window.hpp  edit_window.cpp  edit_window.hpp
